# meetily

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md
diarize-helper/: Cargo.toml
diarize-helper/src/: main.rs
docs/superpowers/plans/: 2026-07-03-meeting-workflows-backend.md  2026-07-03-meeting-workflows-frontend.md  2026-07-09-fork-release-auto-update.md  2026-07-09-neohive-auth-methods.md  2026-07-09-retroactive-diarization.md  2026-07-09-voice-profile-speaker-identification.md  2026-07-10-neural-diarization-segmentation.md  2026-07-10-speaker-naming-redesign.md  2026-07-14-rename-speakers-json-sync.md  2026-07-14-speaker-recognition-visibility.md  2026-07-14-speaker-rename-defaults-and-dedup.md  2026-07-15-workflow-templates-and-obsidian-export.md  2026-07-17-cloud-stt-provider.md  2026-07-17-custom-templates.md  2026-07-17-custom-vocabulary.md
docs/superpowers/specs/: 2026-07-03-meeting-workflows-neohive-design.md  2026-07-09-fork-release-auto-update-design.md  2026-07-09-neohive-auth-methods-design.md  2026-07-09-retroactive-diarization-design.md  2026-07-09-voice-profile-speaker-identification-design.md  2026-07-10-neural-diarization-segmentation-design.md  2026-07-10-speaker-naming-redesign-design.md  2026-07-14-speaker-recognition-visibility-design.md  2026-07-14-speaker-rename-defaults-and-dedup-design.md  2026-07-15-workflow-obsidian-export-and-templates-design.md  2026-07-17-cloud-stt-provider-design.md  (+2 more)
frontend/: build-gpu.sh  package.json
frontend/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: release.sh
(+89 files in other folders)
