[workspace]

[package]
name = "diarize-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
speakrs = { version = "0.5", default-features = false, features = ["coreml", "online", "openblas-static"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[profile.release]
codegen-units = 1
lto = true
